# rf-app

./: .env  Cargo.toml  Dockerfile  Readme.md  docker-compose.yml
.github/workflows/: ci.yml
.github/wrokflows/: ci.yml
backend/: Dockerfile
backend/src/: main.rs
docker/: backend.Dockerfile  frontend.Dockerfile
fronted/: package.json  pnpm-lock.yaml
fronted/components/: Nav.tsx
fronted/lib/: fetcher.ts
fronted/styles/: globals.css
frontend/: README.md  package.json  pnpm-lock.yaml  svelte.config.cjs  tailwind.config.js
frontend/components/: Layout.tsx
frontend/pages/: _app.tsx  cards.tsx  index.tsx
frontend/src/: app.html  store.ts
frontend/src/routes/: index.svelte
migrations/2021-05-02-075215_setup_transactions/: up.sql
migrations/2021-05-06-162725_setup_uuid/: up.sql
src/: connection.rs  handler.rs  main.rs  model.rs  repository.rs  router.rs  schema.rs
src/handler/: cards.rs  mod.rs  transactions.rs
