[package]
name = "rfid_transaction"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
rocket_codegen = "0.4.10"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
diesel = { version = "1.4.7", features = ["chrono", "postgres", "r2d2", "uuidv07"] }
dotenv = "0.15.0"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
serde = "1.0.127"
serde_derive = "1.0.126"
serde_json = "1.0.66"
env_logger = "0.8.4"
log = "0.4.14"
rust-embed="5.9.0"
chrono = { version = "0.4", features = ["serde"]}



[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json","uuid"]
